main news section

--- a/style.css
+++ b/style.css
@@ -8,18 +8,64 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Inter", sans-serif;
+}
+
 .container {
   max-width: 144rem;
-  margin: 5rem auto;
-  background-color: red;
+  margin: 1rem auto;
+  /* background-color: red; */
 }
 
-/* Footer */
-.attribution {
-  font-size: 11px;
-  text-align: center;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem;
 }
 
-.attribution a {
-  color: hsl(228, 45%, 44%);
+.main-nav-list {
+  font-size: 2.5rem;
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+}
+
+.nav-link:link,
+.nav-link:visited {
+  text-decoration: none;
+  color: #333;
+  font-weight: 400;
+}
+
+.nav-link:hover,
+.nav-link:active {
+  color: hsl(5, 85%, 63%);
+}
+
+.main-section {
+  display: grid;
+  grid-template-columns: 70fr 30fr;
+  gap: 2rem;
+}
+
+.img-desktop img {
+  width: 100%;
+}
+
+.main-news {
+  display: flex;
+  margin-top: 1.5rem;
+}
+
+.main-heading {
+  font-size: 6.4rem;
+}
+
+.main-text {
+  font-size: 1.8rem;
+}
+
+.btn-more {
 }
