--- a/style.css
+++ b/style.css
@@ -15,28 +15,29 @@ body {
 .container {
   max-width: 144rem;
   margin: 1rem auto;
-  /* background-color: red; */
+  padding: 0 3.2rem;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2rem;
+  margin: 2rem 0 2rem 0;
 }
 
 .main-nav-list {
-  font-size: 2.5rem;
+  font-size: 2rem;
   display: flex;
-  gap: 2rem;
+  gap: 2.5rem;
   list-style: none;
 }
 
 .nav-link:link,
 .nav-link:visited {
   text-decoration: none;
-  color: #333;
+  color: rgba(61, 61, 61, 0.9);
   font-weight: 400;
+  transition: all 0.3s;
 }
 
 .nav-link:hover,
@@ -44,9 +45,11 @@ body {
   color: hsl(5, 85%, 63%);
 }
 
+/* NEWS SECTION */
+
 .main-section {
   display: grid;
-  grid-template-columns: 70fr 30fr;
+  grid-template-columns: 69fr 31fr;
   gap: 2rem;
 }
 
@@ -55,17 +58,152 @@ body {
 }
 
 .main-news {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  justify-content: center;
+}
+.main-heading-div {
   display: flex;
-  margin-top: 1.5rem;
+  align-items: center;
 }
 
 .main-heading {
   font-size: 6.4rem;
+  color: hsl(240, 100%, 5%);
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1.4rem;
 }
 
 .main-text {
   font-size: 1.8rem;
+  line-height: 1.6;
+  letter-spacing: 0.01rem;
 }
 
-.btn-more {
+.btn-more:link,
+.btn-more:visited {
+  display: inline-block;
+  padding: 1.5rem 2.8rem;
+  background-color: hsl(5, 85%, 63%);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  color: hsl(36, 100%, 99%);
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+  box-shadow: 1.2rem 1.2rem 3.2rem rgba(0, 0, 0, 0.09);
+
+  transition: all 0.3s;
+}
+
+.btn-more:hover,
+.btn-more:active {
+  background-color: #f03e3e;
+}
+
+/* NEWS FEED */
+
+.news-feed {
+  background-color: hsl(240, 100%, 5%);
+}
+
+.secondary-heading {
+  color: hsl(35, 77%, 62%);
+  font-size: 4.2rem;
+  margin: 6rem 3rem 3rem 3rem;
+}
+
+.news-center {
+  display: flex;
+  flex-direction: column;
+  gap: 3.8rem;
+  margin: 3rem;
+}
+
+.news {
+  border-bottom: 1px solid rgba(199, 199, 199, 0.9);
+}
+
+.news:last-child {
+  border-bottom: none;
+}
+
+/* .news:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 75%;
+  padding-top: 2.5rem;
+  padding-right: 10rem;
+  border-bottom: 1px solid rgba(199, 199, 199, 0.5);
+} */
+
+.tertiary-heading {
+  color: hsl(36, 100%, 99%);
+  line-height: 1.6;
+  letter-spacing: 0.09rem;
+  font-size: 2.6rem;
+}
+
+.news-text {
+  /* color: rgba(199, 199, 199, 0.9);
+   */
+  color: hsl(236, 13%, 42%);
+  letter-spacing: 0.05rem;
+  line-height: 1.6;
+  font-size: 1.6rem;
+  margin-bottom: 3rem;
+}
+
+/* TOPICS */
+
+.topics {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.4rem;
+  margin-top: 5rem;
+  margin-bottom: 20rem;
+}
+
+.topic-1 {
+}
+.topic-2 {
+}
+.topic-3 {
+}
+
+.topic-img img {
+  /* width: 15rem;
+  height: 15rem; */
+  /* height: 15rem; */
+  width: 15rem;
+}
+
+.topic-number {
+  font-size: 4.2rem;
+  font-weight: 600;
+  color: #888;
+}
+
+.topic-heading {
+  font-size: 2.2rem;
+  color: hsl(240, 100%, 5%);
+}
+
+.flex {
+  display: flex;
+  gap: 1.8rem;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  /* padding-top: 1.2rem; */
 }
